# mullvadvpn-app

./: CHANGELOG.md  Cargo.toml
.github/workflows/: android-app.yml  daemon.yml  frontend.yml
android/: build.gradle
android/app/: build.gradle.kts
android/buildSrc/: build.gradle.kts
android/e2e/: build.gradle.kts  e2e.properties
dist-assets/: uninstall_macos.sh
dist-assets/windows/: installer.nsh
gui/: package-lock.json  package.json
gui/locales/: messages.pot
gui/scripts/: build-proto.sh
ios/: BuildInstructions.md  CHANGELOG.md  ExportOptions.plist
ios/MullvadVPN/: Account.swift  AppDelegate.swift  ApplicationConfiguration.swift  ConnectViewController.swift  ConnectViewController.xib  DisplayChainedError.swift  GeoJSON.swift  Info.plist  PreferencesDataSource.swift  RootContainerViewController.swift  SimulatorTunnelProvider.swift  Tunnel.swift
ios/MullvadVPN.xcodeproj/: project.pbxproj
ios/MullvadVPNIntents/: Info.plist  IntentHandler.swift  Intents.intentdefinition  Intents.strings
ios/PacketTunnel/: PacketTunnelProvider.swift  Pinger.swift  TunnelMonitor.swift
mullvad-daemon/: Cargo.toml
mullvad-daemon/src/: device.rs  lib.rs  main.rs  management_interface.rs  relays.rs  settings.rs  system_service.rs
mullvad-jni/src/: daemon_interface.rs  jni_event_listener.rs  lib.rs
mullvad-management-interface/proto/: management_interface.proto
mullvad-management-interface/src/: types.rs
mullvad-relays/: Cargo.toml
mullvad-relays/src/: lib.rs  updater.rs
tunnel-obfuscation/: Cargo.toml
tunnel-obfuscation/src/: main.rs
(+122 files in other folders)
