[package]
name = "mullvad-relays"
version = "0.1.0"
authors = ["Mullvad VPN"]
description = "Provides relay selection for Mullvad VPN"
license = "GPL-3.0"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
ipnetwork = "0.16"
err-derive = "0.3.0"
log = "0.4"
serde = "1"
serde_json = "1.0"
rand = "0.7"
futures = "0.3"
tokio = { version = "1.8", features = [ "macros", "time", "rt-multi-thread", "net", "io-std", "fs" ] }
tokio-stream = "0.1"
parking_lot = "0.11"
mullvad-rpc = { path = "../mullvad-rpc" }
mullvad-types = { path = "../mullvad-types" }
talpid-types = { path = "../talpid-types" }
talpid-core = { path = "../talpid-core" }
